Курсовая работа № 2. Игра "Лисенок" - рабочая версия.